--- a/domain.yml
+++ b/domain.yml
@@ -155,13 +155,12 @@ responses:
   - text: Top!
   utter_elterngeld_affirm_prerequisites:
   - text: Super, Du erfüllst die Voraussetzungen für das Elterngeld! 🎉
-  utter_elterngeld_amount:
-  - text: Am besten Du schaust Dir mal den [\U0001F517 Elterngeldrechner](https://familienportal.de/familienportal/meta/egr)
+  utter_elterngeld_amount_reference:
+  - text: Am besten schaust Du Dir mal den [\U0001F517 Elterngeldrechner](https://familienportal.de/familienportal/meta/egr)
       an.
-  utter_elterngeld_application:
-  - text: Du kannst Elterngeld erst nach der Geburt Deines Kindes beantragen. Am besten
-      innerhalb der ersten 3 Lebensmonate. Mehr Informationen dazu findest Du \U0001F517
-      hier](https://familienportal.de/familienportal/familienleistungen/elterngeld/faq/wie-kann-ich-elterngeld-beantragen-/124762)
+  utter_elterngeld_application_reference:
+  - text: Mehr Informationen zur Beantragung findest Du 
+      [🔗 hier](https://familienportal.de/familienportal/familienleistungen/elterngeld/faq/wie-kann-ich-elterngeld-beantragen-/124762)
   utter_elterngeld_inform:
   - text: '**Elterngeld** ist eine Leistung, die Du vom Staat als Unterstützung erhalten
       kannst, wenn Du nach der Geburt Deines Kindes gar nicht oder weniger arbeitest
@@ -171,9 +170,8 @@ responses:
       \ zu können. \n - Du lebst in Deutschland. \n - Du wohnst mit Deinem Kind zusammen.\
       \ \n - Du betreust Dein Kind selbst. \n - Du arbeitest höchstens 30 Stunden\
       \ pro Woche."
-  utter_elterngeld_period:
-  - text: 'Bei der Dauer des **Elterngelds** kannst Du Dich entscheiden: Entweder
-      bis zu 12 Monate Basiselterngeld oder ElterngeldPlus bis zu 24 Monate.'
+  utter_elterngeld_period_reference:
+  - text: 'In der Zwischenzeit kannst Du [🔗 hier](https://familienportal.de/familienportal/familienleistungen/elterngeld/faq/wie-lange-kann-ich-elterngeld-bekommen-/124728) mehr zum Thema Bezugsdauer nachlesen.'
   utter_elterngeld_precise_general:
   - buttons:
     - payload: /choose_elterngeld_precise
@@ -193,11 +191,14 @@ responses:
   utter_elternzeit_inform_deadline:
   - text: Falls Dein Partner direkt ab der Geburt **Elternzeit** nehmen möchte, müsst
       Ihr das in den nächsten 2 Wochen anmelden.
-  utter_elternzeit_period:
-  - text: Pro Kind kannst Du bis zu 3 Jahre **Elternzeit** nehmen.
-  utter_elternzeit_reply_outofscope:
-  - text: "Du willst noch mehr dazu wissen? \n Schau gerne mal [\U0001F517 hier](https://familienportal.de/familienportal/familienleistungen/elternzeit/faq/wann-und-wie-muss-ich-elternzeit-beantragen-/124810)\
-      \ vorbei."
+  utter_elternzeit_period_reference:
+  - text: "Mehr Infos zur Bezugsdauer findest Du [🔗 hier](https://familienportal.de/familienportal/familienleistungen/elternzeit/faq/wie-kann-ich-die-dauer-der-elternzeit-berechnen-/124832)."
+  utter_elternzeit_reference:
+  - text: "Mehr Infos zu Elternzeit findest Du [🔗 hier](https://familienportal.de/familienportal/familienleistungen/elternzeit/faq/wann-und-wie-muss-ich-elternzeit-beantragen-/124810)."
+  utter_elternzeit_notification_reference:
+  - text: "Du kannst Infos zur Anmeldung [🔗 hier](https://familienportal.de/familienportal/familienleistungen/elternzeit/faq/wann-und-wie-muss-ich-elternzeit-beantragen-/124810) nachlesen."
+  utter_elternzeit_requirements_reference:
+  - text: "In der Zwischenzeit findest Du alle Infos zu den Voraussetzungen [🔗 hier](https://familienportal.de/familienportal/familienleistungen/elternzeit/faq/was-ist-elternzeit--/124702)."
   utter_elternzeit_timepartner:
   - text: Ja, für Mütter beginnt die **Elternzeit** frühestens nach dem Ende der **Mutterschutzfrist**.
       Also hast Du noch genug Zeit bis zur Anmeldung 🐢
