--- a/domain.yml
+++ b/domain.yml
@@ -3,9 +3,18 @@ actions:
 - utter_ask_knowmore
 - utter_ask_permission_familydescription
 - utter_elterngeld_reference
-- utter_elternzeit_period
+- utter_elterngeld_application_reference
+- utter_elterngeld_application_link
+- utter_elterngeld_period_reference
+- utter_elterngeld_amount_reference
+- utter_elternzeit_reference
+- utter_elternzeit_period_reference
+- utter_elternzeit_notification_reference
+- utter_elternzeit_requirements_reference
 - utter_im_here_4_u
 - utter_more_info
+- utter_mutterschutz_inform
+- utter_mutterschutz_mutterschutzfrist
 - utter_mutterschutz_periodreply
 - utter_mutterschutz_reference
 - utter_recommend_elterngeld
