--- a/domain.yml
+++ b/domain.yml
@@ -56,6 +56,7 @@ intents:
 - mutterschutz_topic
 - ask_mutterschutz_difference_mutterschutzfrist
 - choose_mutterschutz_general
+- choose_mutterschutz_period
 - elternzeit_topic
 - greet_elternzeit
 - elternzeit_timepartner
@@ -90,7 +91,7 @@ responses:
       title: Höhe
     - payload: /choose_elterngeld_period
       title: Bezugsdauer
-    text: Soll ich Dir sonst noch etwas zu **Beantragung**, **Höhe** oder **Bezugsdauer**
+    text: Soll ich Dir sonst noch etwas zu Beantragung, Höhe oder Bezugsdauer
       von Elterngeld erklären?
   utter_ask_elterngeld_precisequestion:
   - text: Dann stelle jetzt Deine Frage.
@@ -98,7 +99,7 @@ responses:
   - text: Hast Du Dich damit schon beschäftigt?
   utter_ask_elterngeld_residence:
   - text: 'Letzte Frage: In welchem Bundesland lebst Du? Wenn Du nicht in Deutschland
-      lebst, antworte bitte mit **Ausland** 📍'
+      lebst, antworte bitte mit Ausland 📍'
   utter_ask_elterngeld_samehousehold:
   - buttons:
     - payload: '/affirm{"elterngeld_samehousehold": "ja"}'
@@ -112,7 +113,7 @@ responses:
       title: Ja
     - payload: /deny
       title: Nein
-    text: "Lass uns herausfinden, ob Du die **Voraussetzungen** erfüllst 🔍\
+    text: "Lass uns herausfinden, ob Du die Voraussetzungen erfüllst 🔍\
       \  \n Kann ich Dir dafür ein paar Fragen zu Deiner Situation stellen?"
   utter_ask_elterngeld_subtopic:
   - buttons:
@@ -124,8 +125,8 @@ responses:
       title: Höhe
     - payload: /choose_elterngeld_period
       title: Bezugsdauer
-    text: "Ich kann Dir jetzt mehr zu den **Voraussetzungen**, der **Beantragung**,\
-      \ der **Höhe** oder der **Bezugsdauer** des **Elterngeldes** erzählen. \n Möchtest\
+    text: "Ich kann Dir jetzt mehr zu den Voraussetzungen, der Beantragung,\
+      \ der Höhe oder der Bezugsdauer des Elterngeldes erzählen. \n Möchtest\
       \ Du zu einem dieser Themen mehr wissen?"
   utter_ask_elterngeld_workparttime:
   - buttons:
@@ -144,12 +145,17 @@ responses:
       title: Anmeldung
     - payload: /choose_elternzeit_period
       title: Bezugsdauer
-    text: Möchtest Du noch etwas zu **Voraussetzungen**, **Anmeldung** oder **Bezugsdauer**
+    text: Möchtest Du noch etwas zu Voraussetzungen, Anmeldung oder Bezugsdauer
       wissen?
   utter_ask_familydescription:
   - text: Ok! Bitte beschreibe mir kurz Deine Familiensituation.
   utter_ask_familydescription_parent:
   - text: Spreche ich mit der Mutter oder dem Vater?
+    buttons:
+      - payload: '/familydescription_parent{"entity": "Mutter"}'
+        title: Mutter
+      - payload: '/familydescription_parent{"entity": "Vater"}'
+        title: Vater
   utter_ask_familydescription_pregnancy_month:
   - text: Bist Du schwanger? Wenn ja, in welchem Monat?
   utter_ask_knowmore:
@@ -165,7 +171,7 @@ responses:
       title: Was ist Mutterschutz?
     - payload: /ask_mutterschutz_difference_mutterschutzfrist
       title: Unterschied Mutterschutz und Mutterschutzfrist
-    text: "Es sieht aus, als hast Du Dich gerade mit dem Thema **Mutterschutz** beschäftigt.\
+    text: "Es sieht aus, als hast Du Dich gerade mit dem Thema Mutterschutz beschäftigt.\
       \ \n Wähle eine Beispielfrage aus oder schreib' mir direkt Deine Frage."
   utter_ask_permission_familydescription:
   - text: Am besten kann ich Dich dazu beraten, wenn Du mir etwas über Dich erzählst.
@@ -176,14 +182,16 @@ responses:
       title: Elterngeld
     - payload: /choose_elternzeit_requirements
       title: Elternzeit
-    text: Entschuldige - meintest Du die Voraussetzungen für **Elterngeld** oder **Elternzeit**?
+    text: Entschuldige - meintest Du die Voraussetzungen für Elterngeld oder Elternzeit?
   utter_distinguish_period_elterngeld_elternzeit:
     - buttons:
       - payload: /choose_elterngeld_period
         title: Elterngeld
       - payload: /choose_elternzeit_period
         title: Elternzeit
-      text: Entschuldige - meintest Du die Bezugsdauer von **Elterngeld** oder die Dauer von **Elternzeit**?
+      - payload: /choose_mutterschutz_period
+        title: Mutterschutz
+      text: Entschuldige - meintest Du die Bezugsdauer von Elterngeld, die Dauer von Elternzeit oder Mutterschutz?
   utter_confirm_happy:
   - text: Ah super!
   - text: Sehr gut.
@@ -202,11 +210,11 @@ responses:
   - text: Mehr Informationen zur Beantragung findest Du 
       [🔗 hier](https://familienportal.de/familienportal/familienleistungen/elterngeld/faq/wie-kann-ich-elterngeld-beantragen-/124762)
   utter_elterngeld_inform:
-  - text: '**Elterngeld** ist eine Leistung, die Du vom Staat als Unterstützung erhalten
+  - text: 'Elterngeld ist eine Leistung, die Du vom Staat als Unterstützung erhalten
       kannst, wenn Du nach der Geburt Deines Kindes gar nicht oder weniger arbeitest
       🤓'
   utter_elterngeld_inform_prerequisites:
-  - text: "Du musst die folgenden Voraussetzungen erfüllen, um **Elterngeld** beziehen\
+  - text: "Du musst die folgenden Voraussetzungen erfüllen, um Elterngeld beziehen\
       \ zu können. \n - Du lebst in Deutschland. \n - Du wohnst mit Deinem Kind zusammen.\
       \ \n - Du betreust Dein Kind selbst. \n - Du arbeitest höchstens 30 Stunden\
       \ pro Woche."
@@ -218,18 +226,18 @@ responses:
       title: Konkrete Frage
     - payload: /choose_elterngeld_general
       title: Allgemeine Infos
-    text: Hast Du eine konkrete Frage zum **Elterngeld**? Oder soll ich Dir erstmal
+    text: Hast Du eine konkrete Frage zum Elterngeld? Oder soll ich Dir erstmal
       ein paar allgemeine Infos dazu geben?
   utter_elterngeld_reference:
-  - text: "Mehr Infos zu **Elterngeld** findest Du auf dem [🔗 Familienportal](https://familienportal.de/familienportal/familienleistungen/elterngeld/faq)."
-  - text: "In der Zwischenzeit findest Du mehr Infos zum **Elterngeld** auf dem [🔗
+  - text: "Mehr Infos zu Elterngeld findest Du auf dem [🔗 Familienportal](https://familienportal.de/familienportal/familienleistungen/elterngeld/faq)."
+  - text: "In der Zwischenzeit findest Du mehr Infos zum Elterngeld auf dem [🔗
       Familienportal](https://familienportal.de/familienportal/familienleistungen/elterngeld/faq)."
   utter_elternzeit_inform:
-  - text: 'Elternzeit ist eine **unbezahlte Pause** vom Berufsleben, die Du zur Betreuung
+  - text: 'Elternzeit ist eine unbezahlte Pause vom Berufsleben, die Du zur Betreuung
       Deines Kindes nehmen kannst. Startzeitpunkt und Dauer musst Du bei Deinem Arbeitgeber
       anmelden 🤓 '
   utter_elternzeit_inform_deadline:
-  - text: Falls Dein Partner direkt ab der Geburt **Elternzeit** nehmen möchte, müsst
+  - text: Falls Dein Partner direkt ab der Geburt Elternzeit nehmen möchte, müsst
       Ihr das in den nächsten 2 Wochen anmelden.
   utter_elternzeit_period_reference:
   - text: "Mehr Infos zur Bezugsdauer findest Du [🔗 hier](https://familienportal.de/familienportal/familienleistungen/elternzeit/faq/wie-kann-ich-die-dauer-der-elternzeit-berechnen-/124832)."
@@ -240,7 +248,7 @@ responses:
   utter_elternzeit_requirements_reference:
   - text: "In der Zwischenzeit findest Du alle Infos zu den Voraussetzungen [🔗 hier](https://familienportal.de/familienportal/familienleistungen/elternzeit/faq/was-ist-elternzeit--/124702)."
   utter_elternzeit_timepartner:
-  - text: Ja, für Mütter beginnt die **Elternzeit** frühestens nach dem Ende der **Mutterschutzfrist**.
+  - text: Ja, für Mütter beginnt die Elternzeit frühestens nach dem Ende der Mutterschutzfrist.
       Also hast Du noch genug Zeit bis zur Anmeldung 🐢
   utter_goodbye:
   - text: Ok, dann bis zum nächsten Mal! 🌞
@@ -258,32 +266,32 @@ responses:
       stellen 🌞
   - text: Das war es vorerst von mir. Wenn Du noch Fragen hast, melde Dich gerne.
   utter_im_sonne:
-  - text: Ich bin **Sonne**, Dein Familienlotse auf dem Familienportal 🌞
-  - text: Darf ich mich vorstellen? **Sonne** mein Name, Familienlotse auf dem Familienportal
+  - text: Ich bin Sonne, Dein Familienlotse auf dem Familienportal 🌞
+  - text: Darf ich mich vorstellen? Sonne mein Name, Familienlotse auf dem Familienportal
       🌞
   utter_intro:
-  - text: "Hallo, ich bin **Sonne**! 🌞 \n Ich kann Dich hier oder langfristig\
-      \ auf Telegram über Themen rund um **Familienleistungen** informieren und beraten."
+  - text: "Hallo, ich bin Sonne! 🌞 \n Ich kann Dich hier oder langfristig\
+      \ auf Telegram über Themen rund um Familienleistungen informieren und beraten."
   utter_more_info:
-  - text: Du hast Dich zuletzt nach **Mutterschutz** erkundigt. Es gibt noch viele
+  - text: Du hast Dich zuletzt nach Mutterschutz erkundigt. Es gibt noch viele
       weitere Familienleistungen, die für Dich relevant sein könnten.
   utter_mutterschutz_mutterschutzfrist:
-  - text: "Die **Mutterschutzfrist** hingegen ist ein Zeitraum\
+  - text: "Die Mutterschutzfrist hingegen ist ein Zeitraum\
       \ vor und nach der Geburt, in dem die Arbeitnehmerin nicht arbeiten darf 🤓"
   utter_mutterschutz_inform:
-  - text: "Der **Mutterschutz** ist ein besonderer Schutz für schwangere oder stillende\
+  - text: "Der Mutterschutz ist ein besonderer Schutz für schwangere oder stillende\
       \ Arbeitnehmerinnen. \n"
   utter_mutterschutz_periodreply:
-  - text: Der Zeitraum beginnt **6 Wochen vor** dem errechneten Geburtstermin und
-      endet üblicherweise **8 Wochen nach** der Geburt 📅
+  - text: Der Zeitraum beginnt 6 Wochen vor dem errechneten Geburtstermin und
+      endet üblicherweise 8 Wochen nach der Geburt 📅
   utter_mutterschutz_reference:
   - text: "Mehr Infos zu Mutterschutz findest Du [🔗 hier](https://familienportal.de/familienportal/familienleistungen/mutterschutz)."
   utter_outofscope:
-  - text: "Ich kenne mich bisher nur mit **Mutterschutz**, **Elterngeld** und **Elternzeit**\
+  - text: "Ich kenne mich bisher nur mit Mutterschutz, Elterngeld und Elternzeit\
       \ aus. \n Weitere Leistungen findest Du [🔗 hier](https://familienportal.de/familienportal/familienleistungen/familienleistungen-ueberblick)🤓\
       📚"
   utter_recommend_elterngeld:
-  - text: Super, danke! Als {familydescription_parent} könnte auch **Elterngeld**
+  - text: Super, danke! Als {familydescription_parent} könnte auch Elterngeld
       für Dich interessant sein.
   utter_sorry:
   - text: "Sorry, das kann ich Dir leider noch nicht beantworten. Ich habe auch noch
@@ -297,9 +305,9 @@ responses:
   - text: Schön, dass Du wieder da bist 🌞
   - text: Willkommen zurück 🌞
   utter_welcomeback_time:
-  - text: Hey, nur noch **9** Wochen bis zum großen Tag! ✨
+  - text: Hey, nur noch 9 Wochen bis zum großen Tag! ✨
   utter_telegram_code:
-  - text: 'Super! Gib bitte folgenden Code in Telegram ein: `t4g-sonne-start`.'
+  - text: 'Super! Bitte wechsle in die Telegram-App und suche nach `familienlotse_bot`.'
   utter_telegram_offer:
   - buttons:
     - payload: /choose_request_telegramcode
