--- a/domain.yml
+++ b/domain.yml
@@ -1,5 +1,6 @@
 actions:
 - utter_ask_elterngeld_priorknowledge
+- utter_ask_elterngeld_subtopic
 - utter_ask_knowmore
 - utter_ask_permission_familydescription
 - utter_distinguish_period_elterngeld_elternzeit
@@ -7,7 +8,9 @@ actions:
 - utter_elterngeld_amount_reference
 - utter_elterngeld_application_link
 - utter_elterngeld_application_reference
+- utter_elterngeld_inform
 - utter_elterngeld_period_reference
+- utter_elterngeld_precise_general
 - utter_elterngeld_reference
 - utter_elternzeit_notification_reference
 - utter_elternzeit_period_reference
@@ -17,8 +20,8 @@ actions:
 - utter_more_info
 - utter_mutterschutz_inform
 - utter_mutterschutz_mutterschutzfrist
-- utter_mutterschutzfrist_periodreply
 - utter_mutterschutz_reference
+- utter_mutterschutzfrist_periodreply
 - utter_recommend_elterngeld
 - utter_telegram_code
 - utter_telegram_offer
@@ -35,6 +38,9 @@ forms:
 - elterngeldrequirements_form
 - familydescription_form
 intents:
+- choose_elterngeld_application
+- choose_elterngeld_general
+- elterngeld_topic
 - enter_telegramcode
 - familydescription_pregnancy_month
 - familydescription_parent
@@ -46,13 +52,10 @@ intents:
 - elternzeit_period
 - choose_elterngeld_amount
 - ask_mutterschutzfrist_period
-- elterngeld_topic
 - choose_elterngeld_residence
 - choose_elterngeld_precise
-- choose_elterngeld_general
 - choose_elterngeld_period
 - choose_elterngeld_requirements
-- choose_elterngeld_application
 - mutterschutz_topic
 - ask_mutterschutz_difference_mutterschutzfrist
 - choose_mutterschutz_general
@@ -281,11 +284,11 @@ responses:
   utter_mutterschutz_mutterschutzfrist:
   - text: Die Mutterschutzfrist hingegen ist ein Zeitraum vor und nach der Geburt,
       in dem die Arbeitnehmerin nicht arbeiten darf 🤓
+  utter_mutterschutz_reference:
+  - text: Mehr Infos zu Mutterschutz findest Du [🔗 hier](https://familienportal.de/familienportal/familienleistungen/mutterschutz).
   utter_mutterschutzfrist_periodreply:
   - text: Der Zeitraum beginnt 6 Wochen vor dem errechneten Geburtstermin und endet
       üblicherweise 8 Wochen nach der Geburt 📅
-  utter_mutterschutz_reference:
-  - text: Mehr Infos zu Mutterschutz findest Du [🔗 hier](https://familienportal.de/familienportal/familienleistungen/mutterschutz).
   utter_outofscope:
   - text: "Ich kenne mich bisher nur mit Mutterschutz, Elterngeld und Elternzeit aus.\
       \ \n Weitere Leistungen findest Du [\U0001F517 hier](https://familienportal.de/familienportal/familienleistungen/familienleistungen-ueberblick)\U0001F913\
