api token comment

--- a/credentials.yml
+++ b/credentials.yml
@@ -32,6 +32,7 @@ socketio:
 #   twilio_number: "whatsapp:+14155238886"
 
 telegram:
+  # access up-to-date token from BotFather (telegram bot for maintaining bots)
   access_token: "1360649172:AAFrCnPHme5A1rVAOI5OGf5WuskfqU-1SKI"
   verify: "familienlotse_bot"
   webhook_url: "https://9d586fda3a55.ngrok.io/webhooks/telegram/webhook"
